# checkserve

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
requirements/: requirements-pre-commit.txt
src/checkserve/: __init__.py  app.py  config.py  extensions.py  models.py
src/checkserve/static/: style.css
src/checkserve/templates/: index.html
tests/: test_app.py  test_models.py
